{
    "name": "FightControl",
    "maps": [
        {
            "name": "Abilities",
            "id": "c8285dd0-5d3f-44c6-af41-fd5e048db76b",
            "actions": [
                {
                    "name": "Character1Attack",
                    "type": "Button",
                    "id": "2f1aa704-b803-46ca-b9ab-f8fc2fd190b4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Character2Attack",
                    "type": "Button",
                    "id": "41dafe78-8860-485e-b111-6f17d069eda7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Character3Attack",
                    "type": "Button",
                    "id": "c153ea0f-6137-4463-b852-98a49f1e337d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TeamRotateClockWise",
                    "type": "Button",
                    "id": "5dda9972-4dd7-4b21-8f69-c60d34c8e16a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TeamRotateCounterClockWise",
                    "type": "Button",
                    "id": "6780509b-d4d2-49e1-a9d2-d027a71499a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "61d197b3-04bb-400b-ab47-0ed10f4fea3c",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "FightControlScheme",
                    "action": "Character1Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec7a88a4-29e0-4c12-89dc-3c20304c7388",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "FightControlScheme",
                    "action": "Character1Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a5bc469-3501-49f4-ac20-2883a31b5fad",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "FightControlScheme",
                    "action": "Character2Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "202c5c23-f1c9-485f-823a-fa1c5ea4f4f4",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "FightControlScheme",
                    "action": "Character2Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "981707d6-e529-4ee8-8bc4-9904be2486c2",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "FightControlScheme",
                    "action": "Character3Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4529fff-11f8-41a4-8a8a-762bc243e8cf",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "FightControlScheme",
                    "action": "Character3Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0da63cef-0537-4e1f-b30e-2a720e1e6e8b",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "FightControlScheme",
                    "action": "TeamRotateClockWise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec1b2af6-853a-4005-bf27-65d07cd07601",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "FightControlScheme",
                    "action": "TeamRotateClockWise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afcae007-e1e0-4563-b284-dd36675634e4",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "FightControlScheme",
                    "action": "TeamRotateCounterClockWise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8386b8ea-9ca8-4c0c-80bb-666480081cde",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "FightControlScheme",
                    "action": "TeamRotateCounterClockWise",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "FightControlScheme",
            "bindingGroup": "FightControlScheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}